fix: add overflow hidden

--- a/src/components/header/nav/nav.css
+++ b/src/components/header/nav/nav.css
@@ -96,7 +96,7 @@
     min-height: 100vh;
     height: 100%;
     transition: all 0.3s ease-in;
-    /* overflow: hidden; */
+    overflow: hidden;
   }
 
   .nav-elements.active {
